manifests/cluster-addons/seerr/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seerr
  namespace: seerr
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: seerr
            tailscale.com/parent-resource-ns: seerr
      toPorts:
        - ports:
            - port: '5055'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: jellyfin
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: '8096'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: '7878'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: '8989'
              protocol: TCP

    - toFQDNs:
        - matchName: 'api.themoviedb.org'
        - matchName: 'api.github.com'
        - matchName: 'gravatar.com'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
